--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <section class="corpo-site">
         <div class="texto">
           <h1>
-            Olá, sou marcelo, seja bem-vindo <br />
-            ao meu portifolio.
+            Olá, sou marcelo, seja bem-vindo <br/>
+            ao meu portifolio<span class="ponto">.</span>
           </h1>
           <p>
             Profissional com sólida experiência em monitoramento de
@@ -42,12 +42,27 @@
             Atualmente, estou transitando minha carreira para o desenvolvimento
             frontend, aproveitando meu sólido domínio em tecnologias como HTML5,
             CSS3, JavaScript.
-            <br />
+          
           </p>
-        </div>
+          <a href="https://www.seu-link.com" class="btn-link">
+  Saiba mais
+</a>
+
+
+        </div> 
         <!--texto-->
       </section>
       <!-- corpo-site-->
+       
     </main>
   </body>
+  <footer class="footer">
+  <div class="footer-content">
+    <a href="https://www.linkedin.com/in/seu-perfil-linkedin" target="_blank" class="linkedin-link">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="linkedin-icon">
+    </a>
+    <p class="phone-number">+55 (11) 93458-3136</p>
+  </div>
+</footer>
+
 </html>
