teste para a segunda pagina

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             CSS3, JavaScript.
           
           </p>
-          <a href="https://www.seu-link.com" class="btn-link">
-  Saiba mais
+          <a href="./index1.html" class="btn-link">
+  experiencias profissionais
 </a>
 
 
