teste 2 segunda pagina e afins

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <nav class="menu-desktop">
           <ul>
             <li><a href="#">Início</a></li>
-            <li><a href="#">experiência</a></li>
+            <li><a href="./index1.html">experiência</a></li>
             <li><a href="#">Sobre mim</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="https://wa.me/5511934583136?text=Olá%20Marcelo,%20gostaria%20de%20conversar">Contato</a></li>
+
           </ul>
         </nav>
       </div>
@@ -58,7 +59,7 @@
   </body>
   <footer class="footer">
   <div class="footer-content">
-    <a href="https://www.linkedin.com/in/seu-perfil-linkedin" target="_blank" class="linkedin-link">
+    <a href="https://www.linkedin.com/in/marcelo-novais-de-carvalho/" target="_blank" class="linkedin-link">
       <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="linkedin-icon">
     </a>
     <p class="phone-number">+55 (11) 93458-3136</p>
