--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   experiencias profissionais
 </a>
 
+<a href="./Marcelo.n.c-CV.pdf" class="download-btn"> Download CV </a>
 
         </div> 
         <!--texto-->
