--- a/index1.html
+++ b/index1.html
@@ -75,29 +75,8 @@
                 <p><strong>Inglês:</strong> Intermediário</p>
                 <p><strong>Espanhol:</strong> Básico</p>
             </div>
-        </section>
-    <section class="formation-section">
-        <h3>FORMAÇÃO</h3>
-        <p><strong>SENAI, Santo Amaro — Concluído</strong></p>
-        <p>MICROSOFT PL - 900</p>
-        <p>MAIO DE 2024</p>
-        <ul>
-            <li>Implementar e gerenciar serviços utilizando as plataformas da Microsoft, seguindo boas práticas, procedimentos e normas.</li>
-            <li>Identificar o valor de negócios do Microsoft Power Platform</li>
-            <li>Identificar os principais componentes do Microsoft Power Platform</li>
-            <li>Utilizar os principais recursos do Power BI</li>
-            <li>Utilizar os principais recursos do Power Apps</li>
-            <li>Utilizar os principais recursos do Power Automate</li>
-            <li>Utilizar os principais recursos do Power Virtual Agents</li>
-            <li>Demonstrar autogestão</li>
-            <li>Demonstrar pensamento analítico</li>
-        </ul>
-        <p><strong>SENAI, Santo Amaro — Concluído</strong></p>
-        <p>PYTHON PARA DATA SCIENCE</p>
-        <ul>
-            <li>Experiência em análise de dados com Python utilizando a biblioteca Pandas, incluindo limpeza, transformação e manipulação de grandes volumes de dados.</li>
-            <li>Capacidade de realizar filtragem, agregação, e visualização de dados, além de criar relatórios e insights para apoiar a tomada de decisões estratégicas.</li>
-        </ul>
+      
+        </div> 
     </section>
     </div>
     </main>
