--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./index1.css" />
+       <link rel="stylesheet" href="css375px.css" media="only screen and (max-width: 375px)">
     <title>Minha Página</title>
   </head>
   <body>
@@ -59,8 +60,9 @@
             </div>
         </section>
 
-        <!-- Seção Direita -->
+     <!-- Seção Direita -->
         <section class="right-section">
+          
             <div class="right">
                 <h2>COMPETÊNCIAS</h2>
                 <p><strong>Monitoramento de Infraestrutura:</strong><br> Experiência com Zabbix, AWS, Nagios, e Dynatrace.</p>
@@ -69,14 +71,14 @@
                 <p><strong>Trabalho em Equipe:</strong><br> Colaboração eficaz em equipes multidisciplinares.</p>
                 <p><strong>Resolução de Problemas:</strong><br> Capacidade analítica para identificar e resolver problemas rapidamente.</p>
             </div>
-
+<section class="fundo">
             <div class="right-sercom">
                 <h3>IDIOMAS</h3>
                 <p><strong>Inglês:</strong> Intermediário</p>
                 <p><strong>Espanhol:</strong> Básico</p>
             </div>
-      
-        </div> 
+            </div>
+        </section>
     </section>
     </div>
     </main>
