--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
             frontend, aproveitando meu sólido domínio em tecnologias como HTML5,
             CSS3, JavaScript.
           
-          </p>
+          </p> 
+          <div class="btns">
           <a href="./index1.html" class="btn-link">
   experiencias profissionais
 </a>
 
 <a href="./Marcelo.n.c-CV.pdf" class="download-btn"> Download CV </a>
-
+</div>
         </div> 
         <!--texto-->
       </section>
