--- a/index1.html
+++ b/index1.html
@@ -37,10 +37,11 @@
     <main>
       <section class="corpo-site">
    <div class="introducao">
-    <h2>Senso de <span> urgencia</span></h2>
+      <div class="alinhamento-intru">
+         <h2>Senso de <span> urgencia</span></h2>
         <h3>senso analitico de <span>criticidade</span></h3>
         <p><strong>vontade de sempre estar  a frente<span>!</span></strong></p>
-       
+       </div>
    </div>     
  <div class="container">
      <section class="left-section">
