--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
         <div class="logo">
           <a href="#">Minha Marca</a>
         </div>
-        <nav class="menu-desktop">
+        <button id="menuToggle" class="menu-toggle">☰</button>
+        <nav class="menu-desktop" id="navMenu">
           <ul>
             <li><a href="#">Início</a></li>
             <li><a href="./index1.html">experiência</a></li>
             <li><a href="#">Sobre mim</a></li>
-            <li><a href="https://wa.me/5511934583136?text=Olá%20Marcelo,%20gostaria%20de%20conversar">Contato</a></li>
-
+            <li>
+              <a
+                href="https://wa.me/5511934583136?text=Olá%20Marcelo,%20gostaria%20de%20conversar"
+                >Contato</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
@@ -33,7 +38,7 @@
       <section class="corpo-site">
         <div class="texto">
           <h1>
-            Olá, sou marcelo, seja bem-vindo <br/>
+            Olá, sou marcelo, seja bem-vindo <br />
             ao meu portifolio<span class="ponto">.</span>
           </h1>
           <p>
@@ -43,29 +48,38 @@
             Atualmente, estou transitando minha carreira para o desenvolvimento
             frontend, aproveitando meu sólido domínio em tecnologias como HTML5,
             CSS3, JavaScript.
-          
-          </p> 
+          </p>
           <div class="btns">
-          <a href="./index1.html" class="btn-link">
-  experiencias profissionais
-</a>
+            <a href="./index1.html" class="btn-link">
+              experiencias profissionais
+            </a>
 
-<a href="./Marcelo.n.c-CV.pdf" class="download-btn"> Download CV </a>
-</div>
-        </div> 
+            <a href="./Marcelo.n.c-CV.pdf" class="download-btn">
+              Download CV
+            </a>
+          </div>
+        </div>
         <!--texto-->
       </section>
       <!-- corpo-site-->
-       
     </main>
+    <script src="./script.js"></script>
   </body>
-  <footer class="footer">
-  <div class="footer-content">
-    <a href="https://www.linkedin.com/in/marcelo-novais-de-carvalho/" target="_blank" class="linkedin-link">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="linkedin-icon">
-    </a>
-    <p class="phone-number">+55 (11) 93458-3136</p>
-  </div>
-</footer>
 
+  <footer class="footer">
+    <div class="footer-content">
+      <a
+        href="https://www.linkedin.com/in/marcelo-novais-de-carvalho/"
+        target="_blank"
+        class="linkedin-link"
+      >
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png"
+          alt="LinkedIn"
+          class="linkedin-icon"
+        />
+      </a>
+      <p class="phone-number">+55 (11) 93458-3136</p>
+    </div>
+  </footer>
 </html>
